Update the lab result upload endpoints
Follows a skeleton of: get lab id from header, get order number
and lab result from body, return

Also update the openapi.yaml
